# folly-lite

./: CMakeLists.txt  readme.md
folly/folly/: Foreach.h  Malloc.cpp  ScopeGuard.h  folly-config.h
jemalloc/jemalloc-4.2.0/: libjemalloc.cm
jemalloc/src/: jemalloc.c
libjemalloc/tmp/: libjemalloc-target-cfgcmd.txt
test/: main.cpp  performanceCmp.cpp  testFBString.cpp  testFBVector.cpp
